# linkedin-profile

./: .gitignore  CLAUDE.md  README.md  autopilot-progress.md
.claude/: settings.json
.claude/agents/: architect.md  engineer.md  qa.md
.claude/agents/memory/: architect-lessons.md  engineer-lessons.md  qa-lessons.md
.claude/hooks/: clarity-gate-check.sh  guard-dangerous-commands.sh  guard-protected-files.sh  memory-reminder.sh  preserve-pipeline-state.sh  session-standup.sh
.claude/rules/: mcp-server.md  skills.md  templates.md
.claude/skills/autopilot/: SKILL.md
.claude/skills/critique/: SKILL.md
.claude/skills/pipeline/: SKILL.md  prompts.md
.claude/skills/profile/: SKILL.md
.claude/skills/scaffold/: SKILL.md
docs/: architecture.md  token-optimization.md
mcp-server/: pyproject.toml
mcp-server/src/: config.py  server.py  template_engine.py
mcp-server/src/tools/: batch.py  checklist.py  patterns.py  scaffold.py
mcp-server/tests/: test_cross_project.py  test_scaffold.py
src/: profile_formatter.py  resume_parser.py  scoring.py
templates/: CLAUDE.template.md  manifest.json  memory-header.template.md  settings.json
templates/agents/: engineer.md  qa.md
templates/hooks/: guard-protected-files.sh  memory-reminder.sh
templates/skills/: critique-SKILL.md  pipeline-SKILL.md
