[project]
name = "claude-mcp-server"
version = "0.1.0"
description = "FastMCP server for Claude Code workflow optimization"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
claude-mcp-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
